log
Thu Apr  7 15:24:49 UTC 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:3: error: unknown type name ‘pair’; did you mean ‘Pair’?
   pair ** buckets=(pair**)malloc(sizeof(pair));
   ^~~~
   Pair
hashmap.c:43:20: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   pair ** buckets=(pair**)malloc(sizeof(pair));
                    ^~~~
                    Pair
hashmap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:43:26: error: expected expression before ‘)’ token
   pair ** buckets=(pair**)malloc(sizeof(pair));
                          ^
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets->key=key;
          ^~
hashmap.c:45:10: error: request for member ‘value’ in something not a structure or union
   buckets->value=value;
          ^~
hashmap.c:49:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   map->buckets=buckets;
               ^
cc1: all warnings being treated as errors
Compilation failed
32a36c5
Thu Apr  7 15:25:36 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: ‘*buckets’ is a pointer; did you mean to use ‘->’?
   buckets->key=key;
          ^~
          ->
hashmap.c:45:10: error: ‘*buckets’ is a pointer; did you mean to use ‘->’?
   buckets->value=value;
          ^~
          ->
Compilation failed
8cbe21e
Thu Apr  7 15:26:24 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:10: error: ‘*buckets’ is a pointer; did you mean to use ‘->’?
   buckets->value=value;
          ^~
          ->
Compilation failed
c339899
Thu Apr  7 15:27:45 UTC 2022: 
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:10: error: ‘*buckets’ is a pointer; did you mean to use ‘->’?
   buckets->value=value;
          ^~
          ->
Compilation failed
163b4b8
Thu Apr  7 15:28:08 UTC 2022: 
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:10: error: ‘*buckets’ is a pointer; did you mean to use ‘->’?
   buckets->value=value;
          ^~
          ->
Compilation failed
e305e00
Thu Apr  7 15:28:23 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:12: error: expected identifier before ‘->’ token
   buckets->->value=value;
            ^~
Compilation failed
722d1de
Thu Apr  7 15:28:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:12: error: expected identifier before ‘*’ token
   buckets->*value=value;
            ^
Compilation failed
0a75213
Thu Apr  7 15:28:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:12: error: expected identifier before ‘(’ token
   buckets->(*value)=value;
            ^
Compilation failed
937638b
Thu Apr  7 15:29:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: request for member ‘key’ in something not a structure or union
   buckets.key=key;
          ^
hashmap.c:45:11: error: expected expression before ‘->’ token
   buckets*->value=value;
           ^~
Compilation failed
5d6679e
Thu Apr  7 15:31:27 UTC 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:3: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   pos=hash(key,map->capacity);
   ^~~
   pow
hashmap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
27cca5c
Thu Apr  7 15:31:39 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ddc2e73
